# rich2d

./: .gitignore  LICENSE  README.md  pyproject.toml
changelogs/: release02.md
demos/: demo01_blank_window.py  demo02_blue_window.py  demo03_small_window.py  demo04_game_with_title.py  demo05_game_with_icon.py  demo06_rectangles.py  demo07_circles.py  demo08_text_on_screen.py  demo09_flashing_text.py  demo10_written_text.py  demo11_button.py  demo12_switching_screen.py  demo13_polygons.py  demo14_keyboard_press.py  demo15_grid_sprites.py  demo16_grid_collision.py
demos/release01/: demo01_blank_window.py  demo02_blue_window.py  demo03_small_window.py  demo07_circles.py  demo09_flashing_text.py  demo11_button.py  demo12_switching_screen.py  demo14_keyboard_press.py  demo15_grid_sprites.py  demo16_grid_collision.py
demos/release02/: demo01_image_sprites.py  demo02_scaled_text_on_screen.py  demo03_sprite_sheet.py  demo04_drag_and_drop.py  demo05_menu_bar.py  demo06_toggle_image.py  demo07_pile_of_sprites.py  demo08_exit_button.py
demos/release03/: demo01_visibility_and_activity.py  demo02_music_and_sounds.py  demo03_update_in_time_intervals.py
elements/: __init__.py  element.py  flashing_text.py  written_text.py
elements/animated_text/: flashing_text.py  (+1 more)
game/: __init__.py  game.py  game_config.py  game_model.py
handlers/: __init__.py  handler.py  mouse_click_handler.py
models/: __init__.py  button.py  model_group.py  model_switch.py  state_model.py
sprites/: __init__.py  circle.py  polygon.py  rectangle.py  sprite.py  text.py
state/: state.py
(+55 files in other folders)
