[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rich2d"
version = "2.0.0"
description = "A game engine for 2D Games written in Python"
readme = "README.md"
authors = [{ name = "rdouglascanada", email = "rdouglascanada@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["rdouglascanada", "game", "engine", "2d"]
dependencies = ["pygame"]
requires-python = ">=3.7"

[project.urls]
repository    = "https://github.com/rdouglascanada/rich2d"
documentation = "https://github.com/rdouglascanada/rich2d"